# LLM-Based_Agents_Evolving_Social_Networks

./: README.md  pyproject.toml
configs/: EXP_HER_br.yaml  EXP_HER_llm_small.yaml  EXP_HE_br.yaml  EXP_HE_br_hom.yaml  EXP_HE_llm_grid11.yaml  EXP_HE_llm_grid21.yaml  EXP_HE_llm_hom_small.yaml  EXP_HE_llm_nudge.yaml  EXP_HE_llm_small.yaml  EXP_HE_llm_smoke.yaml  EXP_HFR_br.yaml  EXP_HFR_llm_small.yaml  EXP_HF_br.yaml  EXP_HF_hybrid20.yaml  EXP_HF_llm_grid11.yaml  EXP_HF_llm_grid21.yaml  EXP_HF_llm_small.yaml  EXP_HF_llm_smoke.yaml  EXP_HF_random.yaml  EXP_LE_br.yaml  EXP_LE_llm_grid11.yaml  EXP_LE_llm_grid21.yaml  EXP_LE_llm_small.yaml  EXP_LF_br.yaml  EXP_LF_llm_grid11.yaml  EXP_LF_llm_grid21.yaml  EXP_LF_llm_small.yaml  HE.yaml  HER.yaml  HF.yaml  HFR.yaml  HF_llm_mid.yaml  HF_llm_smoke.yaml  LE.yaml  LF.yaml  base.yaml
notebooks/: 01_check_distributions.py  02_network_structure_starter.py  03_compare_RQs.py
scripts/: align_compare.py  make_br_figs.py  make_fig_rq4_net_vs_pretax.py  make_four_distributions.py  make_inequality_story_figs.py  make_llm_figs.py  run_scenario.sh
src/: run.py
src/env/: model.py  model_bootstrap.py  network.py  scenarios.py  utility.py
src/llm/: client_ollama.py  prompts.py
src/metrics/: __init__.py  inequality.py  logging.py  network_stats.py  percentiles.py
src/utils/: seed.py
tests/: test_link_rules.py  test_llm_parser.py  test_metrics.py  test_percentiles.py  test_utility.py
